# To_Do_App_using_Fastapi

./: README.md  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py  todo.db
routers/: users.py
static/css/: style.css
templates/: Account.html  add.html  delete.html  edit-todo.html  error.html  home.html  layout.html  login.html  sign_up.html  welcome.html
