[project]
name = "to-do-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.129.2",
    "itsdangerous>=2.2.0",
    "passlib[aegon2,argon2]>=1.7.4",
    "sqlalchemy>=2.0.46",
]
